Fixed registries